# Robot-Drawing

./: README.md  read.me
RedBot_motorController/: RedBot_motorController.ino
image_segmentation/: image_segmentation.py
ros_navigation/planner/: CMakeLists.txt  package.xml
ros_navigation/planner/src/: line_tracking.py  planner.py
ros_navigation/robot_ros_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ros_navigation/robot_ros_control/config/: controller.yaml  differential_drive_controller.yaml
ros_navigation/robot_ros_control/include/: RobotHW.h
ros_navigation/robot_ros_control/launch/: arm_ros_controller.launch~  robot_ros_controller.launch
ros_navigation/robot_ros_control/src/: RobotConrtroller.cpp  RobotHW.cpp
ros_navigation/robot_ros_control/urdf/: robot.urdf
